<resources>
    <string name="app_name">RecruitMe</string>
    <string name="AppTitle">RecruitMe</string>
    <string name="LoginTitle">Login</string>
    <string name="LoginMessage">Please sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="administrator">Administrator</string>
    <string name="email_label">Email :</string>
    <string name="request_password_update">Request Password Update</string>
    <string name="logout">Logout</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_profile">Profile</string>
    <string name="student">Students</string>
    <string name="company">Companies</string>
    <string name="add_student">Add Student</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone No</string>
    <string name="graduation_year">Graduation Year</string>
    <string name="branch">Branch</string>
    <string name="back_button">Back Button</string>
    <string name="add_user_button">Add User Button</string>
    <string name="filter_button">Filter Button</string>
    <string name="jobs">Jobs</string>
    <string name="hi">Hi,</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications :</string>
    <string name="student_1">Student</string>
    <string name="name_1">Name:</string>
    <string name="email_1">Email:</string>
    <string name="branch_1">Branch:</string>
    <string name="graduation_year_1">Graduation Year:</string>
    <string name="profile">Profile:</string>
    <string name="cgpa">CGPA</string>
    <string name="backlogs">Backlogs</string>
    <string name="skills">Skills</string>
    <string name="projects">Projects</string>
    <string name="work_experience">Work Experience</string>
    <string name="resume">Resume:</string>
    <string name="update_profile">Update profile</string>
    <string name="update_resume">Update Resume</string>
    <string name="companies">Companies</string>
    <string name="location">Location</string>
    <string name="add_company">Add Company</string>
    <string name="company_1">Company</string>
    <string name="website">Website</string>
    <string name="description">Description</string>
    <string name="industry">Industry</string>
    <string name="add_jobs_button">Add Jobs Button</string>
    <string name="add_job">Add Job</string>
    <string name="job_title">Job Title</string>
    <string name="required_skills">Required Skills</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="salary_range_in_lpa">Salary Range in LPA</string>
    <string name="job_details">Job Details</string>
    <string name="update_job">Update Job</string>
    <string name="applications">Applications</string>
    <string name="delete_job">Delete Job</string>
    <string name="apply">Apply</string>
    <string name="already_applied">Already Applied</string>
</resources>