<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CompanyAddJobActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:id="@+id/BackButton"
            app:srcCompat="@drawable/ic_back"
            android:contentDescription="@string/back_button" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_job"
            android:paddingHorizontal="10dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="26sp"
            />

    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:padding="12dp"
        android:inputType="text"
        android:id="@+id/jobTitleField"
        android:hint="@string/job_title"
        android:background="@drawable/edittext_background"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:padding="12dp"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:gravity="top"
        android:hint="@string/description"
        android:id="@+id/jobDescriptionField"
        android:background="@drawable/edittext_background"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/salary_range_in_lpa"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="8dp"
        >
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:layout_marginEnd="8dp"
            android:padding="12dp"
            android:id="@+id/minSalary"
            android:hint="@string/min"
            android:background="@drawable/edittext_background"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:layout_marginStart="8dp"
            android:padding="12dp"
            android:id="@+id/maxSalary"
            android:hint="@string/max"
            android:background="@drawable/edittext_background"
            />
    </LinearLayout>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:padding="12dp"
        android:inputType="text"
        android:id="@+id/skillsField"
        android:hint="@string/required_skills"
        android:background="@drawable/edittext_background"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/background"
        android:layout_marginVertical="24dp"
        android:text="@string/add_job"
        android:background="@drawable/button_background"
        android:id="@+id/AddJobButton"
        />

    <ProgressBar
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:id="@+id/AddJobProgress"
        />

</LinearLayout>