<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AdminAddCompanyActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:id="@+id/BackButton"
            app:srcCompat="@drawable/ic_back"
            android:contentDescription="@string/back_button" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_company"
            android:paddingHorizontal="10dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="26sp"
            />

    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:padding="12dp"
        android:inputType="textPersonName"
        android:id="@+id/nameField"
        android:hint="@string/name"
        android:background="@drawable/edittext_background"
        android:autofillHints="name" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:id="@+id/emailField"
        android:background="@drawable/edittext_background"
        android:autofillHints="emailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:padding="12dp"
        android:inputType="phone"
        android:id="@+id/phoneField"
        android:hint="@string/phone_no"
        android:background="@drawable/edittext_background"
        android:autofillHints="phone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:padding="12dp"
        android:inputType="text"
        android:id="@+id/locationField"
        android:hint="@string/location"
        android:background="@drawable/edittext_background"
         />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/background"
        android:layout_marginVertical="24dp"
        android:text="@string/add_company"
        android:background="@drawable/button_background"
        android:id="@+id/AddCompanyButton"
        />

    <ProgressBar
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:id="@+id/AddCompanyProgress"
        />
</LinearLayout>