<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="36dp"
    android:paddingTop="36dp"
    tools:context=".StudentProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="48dp"
        android:layout_weight="1">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/AppTitle"
               android:textAlignment="center"
               android:textStyle="bold"
               android:textSize="32sp"
               android:layout_marginBottom="32dp"
               />

           <ImageView
               android:layout_margin="8dp"
               android:layout_width="match_parent"
               android:layout_height="172dp"
               app:srcCompat="@drawable/student"
               android:contentDescription="@string/student"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/student_1"
               android:textAlignment="center"
               android:textStyle="bold"
               android:textSize="32sp"
               android:layout_marginBottom="32dp"
               />
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginVertical="8dp"
               >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/name_1"
                   android:textStyle="bold"
                   android:paddingHorizontal="8dp"
                   android:textSize="18sp"
                   />
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textSize="18sp"
                   android:id="@+id/StudentName"
                   />
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginVertical="8dp"
               >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/email_1"
                   android:textStyle="bold"
                   android:paddingHorizontal="8dp"
                   android:textSize="18sp"
                   />
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textSize="18sp"
                   android:id="@+id/StudentEmail"
                   />
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginVertical="8dp"
               >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/branch_1"
                   android:textStyle="bold"
                   android:paddingHorizontal="8dp"
                   android:textSize="18sp"
                   />
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textSize="18sp"
                   android:id="@+id/StudentBranch"
                   />
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginVertical="8dp"
               >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/graduation_year_1"
                   android:textStyle="bold"
                   android:paddingHorizontal="8dp"
                   android:textSize="18sp"
                   />
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textSize="18sp"
                   android:id="@+id/StudentGradYear"
                   />
           </LinearLayout>
           <ProgressBar
               android:layout_width="42dp"
               android:layout_height="42dp"
               android:layout_gravity="center_horizontal"
               android:visibility="gone"
               android:id="@+id/LogoutProgress"
               />
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginVertical="8dp"
               android:textColor="@color/background"
               android:textStyle="bold"
               android:text="@string/logout"
               android:id="@+id/AdminLogout"
               android:background="@drawable/button_error_background"
               />
           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:layout_marginVertical="6dp"
               android:background="@color/foreground"
               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/profile"
               android:layout_marginVertical="12dp"
               android:textStyle="bold"
               android:textSize="18sp"
               />
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginVertical="8dp"
               android:padding="12dp"
               android:inputType="numberDecimal"
               android:id="@+id/CGPAField"
               android:hint="@string/cgpa"
               android:background="@drawable/edittext_background"
               />
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginVertical="8dp"
               android:padding="12dp"
               android:inputType="number"
               android:id="@+id/BacklogsField"
               android:hint="@string/backlogs"
               android:background="@drawable/edittext_background"
               />
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginVertical="8dp"
               android:padding="12dp"
               android:inputType="textMultiLine"
               android:minLines="3"
               android:id="@+id/SkillsField"
               android:hint="@string/skills"
               android:gravity="top"
               android:background="@drawable/edittext_background"
               />
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginVertical="8dp"
               android:padding="12dp"
               android:inputType="textMultiLine"
               android:minLines="3"
               android:id="@+id/ProjectsField"
               android:hint="@string/projects"
               android:gravity="top"
               android:background="@drawable/edittext_background"
               />
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginVertical="8dp"
               android:padding="12dp"
               android:inputType="textMultiLine"
               android:minLines="3"
               android:id="@+id/WorkExperienceField"
               android:hint="@string/work_experience"
               android:gravity="top"
               android:background="@drawable/edittext_background"
               />



           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="@color/background"
               android:layout_marginVertical="24dp"
               android:text="@string/update_profile"
               android:background="@drawable/button_background"
               android:id="@+id/UpdateProfileButton"
               />

           <ProgressBar
               android:layout_width="42dp"
               android:layout_height="42dp"
               android:layout_gravity="center_horizontal"
               android:visibility="gone"
               android:id="@+id/UpdateProfileProgress"
               />
       </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:menu="@menu/student_menu"
        android:id="@+id/StudentNavigation"
        android:background="@drawable/bottom_navigation_background"
        />


</LinearLayout>